--- a/angular.json
+++ b/angular.json
@@ -29,18 +29,24 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/bootstrap/dist/js/bootstrap.js",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": []
           },
           "configurations": {
             "production": {
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                    "minify": true,
+                    "inlineCritical": false
+                }
+            },
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "5mb",
+                  "maximumError": "10mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -55,6 +61,7 @@
                 }
               ],
               "outputHashing": "all"
+
             },
             "development": {
               "buildOptimizer": false,
